--- a/crud/crud.csproj
+++ b/crud/crud.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Models\PetModel.cs" />
     <Compile Include="Models\IPetRepository.cs" />
+    <Compile Include="Presenters\Common\ModelDataValidation.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
     <Compile Include="Presenters\PetPresenter.cs" />
     <Compile Include="Program.cs" />
